{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 187,
  "lineage": "814c4255-d39e-c166-7364-4c9403a82a12",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a83b41b144470fbd",
            "arn": "arn:aws:ec2:ap-south-1:732940910144:elastic-ip/eipalloc-0a83b41b144470fbd",
            "association_id": "eipassoc-0bc8ced4fcd1b5d4c",
            "domain": "vpc",
            "id": "eipalloc-0a83b41b144470fbd",
            "instance": "i-0d3a42278cce9ae63",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-066fee43954e08b44",
            "private_dns": "ip-10-0-10-228.ap-south-1.compute.internal",
            "private_ip": "10.0.10.228",
            "public_dns": "ec2-65-1-203-217.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.203.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "ElasticIP-bastion"
            },
            "tags_all": {
              "name": "ElasticIP-bastion"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00022ccb33529c637",
            "arn": "arn:aws:ec2:ap-south-1:732940910144:instance/i-0d3a42278cce9ae63",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3a42278cce9ae63",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066fee43954e08b44",
            "private_dns": "ip-10-0-10-228.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.228",
            "public_dns": "ec2-65-1-203-217.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.203.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aacaecd701e72144",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01fee1c14c592fd52",
            "tags": {
              "Name": "Bastion-Ec2-Machine"
            },
            "tags_all": {
              "Name": "Bastion-Ec2-Machine"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-014ad7ae8d07a8e11"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.allow_all",
            "data.aws_ami.bastion",
            "data.aws_availability_zones.availability",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:security-group/sg-014ad7ae8d07a8e11",
            "description": "Allow all inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014ad7ae8d07a8e11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": "",
            "owner_id": "732940910144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Abhishek",
              "Owner": "Abhishek",
              "bastion": "Bastion-Ec2-Machine",
              "eip": "ElasticIP-bastion",
              "private_subnet_tag": "prsubnets",
              "public_subnet_tags": "pusubnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Abhishek",
              "Owner": "Abhishek",
              "bastion": "Bastion-Ec2-Machine",
              "eip": "ElasticIP-bastion",
              "private_subnet_tag": "prsubnets",
              "public_subnet_tags": "pusubnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-05686c72236839773"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:network-acl/acl-0a282229da888cfb2",
            "default_network_acl_id": "acl-0a282229da888cfb2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a282229da888cfb2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "732940910144",
            "subnet_ids": [
              "subnet-01fee1c14c592fd52",
              "subnet-03a363131de6a96c9",
              "subnet-0cc2e7033c400ba15",
              "subnet-0e75170f6ef70f234"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-default",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-default",
              "Owner": "Abhishek"
            },
            "vpc_id": "vpc-05686c72236839773"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:route-table/rtb-0c4b444b086584202",
            "default_route_table_id": "rtb-0c4b444b086584202",
            "id": "rtb-0c4b444b086584202",
            "owner_id": "732940910144",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-default",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-default",
              "Owner": "Abhishek"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05686c72236839773"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:security-group/sg-0102fc4cb0aa4b232",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0102fc4cb0aa4b232",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "732940910144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-default",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-default",
              "Owner": "Abhishek"
            },
            "vpc_id": "vpc-05686c72236839773"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea4fc88b86785c7e",
            "arn": "arn:aws:ec2:ap-south-1:732940910144:elastic-ip/eipalloc-0ea4fc88b86785c7e",
            "association_id": "eipassoc-0be4efa4e247651b2",
            "domain": "vpc",
            "id": "eipalloc-0ea4fc88b86785c7e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0006df3eafee6013a",
            "private_dns": "ip-10-0-10-137.ap-south-1.compute.internal",
            "private_ip": "10.0.10.137",
            "public_dns": "ec2-13-202-47-91.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.47.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-ap-south-1a",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-ap-south-1a",
              "Owner": "Abhishek"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:internet-gateway/igw-0d91f11c8b3ad4ab5",
            "id": "igw-0d91f11c8b3ad4ab5",
            "owner_id": "732940910144",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev",
              "Owner": "Abhishek"
            },
            "vpc_id": "vpc-05686c72236839773"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea4fc88b86785c7e",
            "association_id": "eipassoc-0be4efa4e247651b2",
            "connectivity_type": "public",
            "id": "nat-0353f4d322782d41e",
            "network_interface_id": "eni-0006df3eafee6013a",
            "private_ip": "10.0.10.137",
            "public_ip": "13.202.47.91",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01fee1c14c592fd52",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-ap-south-1a",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-ap-south-1a",
              "Owner": "Abhishek"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cbfefef188f51e071080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0353f4d322782d41e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cbfefef188f51e07",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d91f11c8b3ad4ab5",
            "id": "r-rtb-01f052080dcb4fa451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f052080dcb4fa45",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:route-table/rtb-0cbfefef188f51e07",
            "id": "rtb-0cbfefef188f51e07",
            "owner_id": "732940910144",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0353f4d322782d41e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-private",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-private",
              "Owner": "Abhishek"
            },
            "timeouts": null,
            "vpc_id": "vpc-05686c72236839773"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:route-table/rtb-01f052080dcb4fa45",
            "id": "rtb-01f052080dcb4fa45",
            "owner_id": "732940910144",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d91f11c8b3ad4ab5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-public",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-public",
              "Owner": "Abhishek"
            },
            "timeouts": null,
            "vpc_id": "vpc-05686c72236839773"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad4e1075bdc909f9",
            "route_table_id": "rtb-0cbfefef188f51e07",
            "subnet_id": "subnet-0cc2e7033c400ba15"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a1b6fd71d2506a0",
            "route_table_id": "rtb-0cbfefef188f51e07",
            "subnet_id": "subnet-03a363131de6a96c9"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9e83bde171481d4",
            "route_table_id": "rtb-01f052080dcb4fa45",
            "subnet_id": "subnet-01fee1c14c592fd52"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064a7f714d76c365d",
            "route_table_id": "rtb-01f052080dcb4fa45",
            "subnet_id": "subnet-0e75170f6ef70f234"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:subnet/subnet-0cc2e7033c400ba15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc2e7033c400ba15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732940910144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-private-ap-south-1a",
              "Owner": "Abhishek",
              "Type": "prsubnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-private-ap-south-1a",
              "Owner": "Abhishek",
              "Type": "prsubnets"
            },
            "vpc_id": "vpc-05686c72236839773"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:subnet/subnet-03a363131de6a96c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a363131de6a96c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732940910144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-private-ap-south-1b",
              "Owner": "Abhishek",
              "Type": "prsubnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-private-ap-south-1b",
              "Owner": "Abhishek",
              "Type": "prsubnets"
            },
            "vpc_id": "vpc-05686c72236839773"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:subnet/subnet-01fee1c14c592fd52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fee1c14c592fd52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732940910144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-public-ap-south-1a",
              "Owner": "Abhishek",
              "Type": "pusubnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-public-ap-south-1a",
              "Owner": "Abhishek",
              "Type": "pusubnets"
            },
            "vpc_id": "vpc-05686c72236839773"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:subnet/subnet-0e75170f6ef70f234",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e75170f6ef70f234",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732940910144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev-public-ap-south-1b",
              "Owner": "Abhishek",
              "Type": "pusubnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev-public-ap-south-1b",
              "Owner": "Abhishek",
              "Type": "pusubnets"
            },
            "vpc_id": "vpc-05686c72236839773"
          },
          "dependencies": [
            "data.aws_availability_zones.availability",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732940910144:vpc/vpc-05686c72236839773",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a282229da888cfb2",
            "default_route_table_id": "rtb-0c4b444b086584202",
            "default_security_group_id": "sg-0102fc4cb0aa4b232",
            "dhcp_options_id": "dopt-09f91f7c487a7443f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05686c72236839773",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c4b444b086584202",
            "owner_id": "732940910144",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-dev",
              "Owner": "Abhishek"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-dev",
              "Owner": "Abhishek"
            }
          }
        }
      ]
    }
  ]
}